--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,18 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.10)
 
 project(OwlRenderer)
 
 set(CMAKE_BUILD_TYPE DEBUG)
 
-file(GLOB SOURCES *.h *.cpp)
+set(CMAKE_CXX_STANDARD 17)
+
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+
+
+aux_source_directory(./Test SOURCES)
 
 
 
